--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -79,7 +79,7 @@ h1 {
     border-radius: 2px;
     font-size: 12px;
     font-weight: bold;
-    float: right;
+    float: left;
     margin-top: 10px;
     line-height: 30px;
     cursor: pointer;
