--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,11 +14,21 @@ h1 {
     display: flex;
 }
 
+.flex span {
+    width: 10%;
+    padding-top: 10px;
+    font-weight: bold;
+}
+
+.form-control {
+    width: 50% !important;
+}
+
 .form-input {
     background-color: #fff;
     border: 1px solid #ccc;
     overflow: hidden;
-    padding: 10px 5px 10px 5px;
+    padding: 10px 5px 10px 0;
     color: #777;
     font-family: sans-serif;
     font-size: 13px;
