--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,14 +19,10 @@ h1 {
     margin-top: 10px;
 }
 
-.flex span {
+.form-label {
     width: 10%;
     padding-top: 10px;
     font-weight: bold;
-}
-
-.form-control {
-    width: 50% !important;
 }
 
 .form-input {
@@ -41,7 +37,6 @@ h1 {
     margin-bottom: 6px;
     margin-top: 1px;
     outline: none;
-    width: 80px;
 }
 
 .react-tagsinput {
