--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,6 +6,15 @@ body {
     direction: rtl;
 }
 
+#app {
+    background-color: #607D8B;
+}
+
+.breadcrumbs, .breadcrumbs:visited {
+    color: white;
+    font-weight: 100;
+}
+
 h1,.recommendation, .recommendation:visited {
     color: #444;
 }
